style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: Disco;
}

.avoid-clicks {
  pointer-events: none;
}

@font-face {
  font-family: Disco;
  src: url("fonts/DISCO___.ttf");
}

@font-face {
  font-family: PaintedLady;
  src: url("fonts/Painted Lady.otf");
}

body {
  overflow: hidden;
}

#page-one {
  background-color: #9a454d;
}

#page-two,
#page-three,
#page-four {
  background-color: white;
}

#page-three {
}

#page-four {
}

.main-container {
  height: 100vh;
  width: 100%;
  position: absolute;
  right: 00%;
  display: flex;
  transition: all .75s linear;
}

.container {
  width: 100%;
  min-width: 100%;
  height: 100vh;
}

.inner-container {
  /* padding-top: 67px; */
  width: 100%;
  height: 100vh;
  overflow: auto;
}

/* NOTE: NAV */
nav {
  position: fixed;
  z-index: 10;
  width: 100%;
  display: flex;
  align-items: center;
  color: white;
  padding: 5px;
  font-size: 18px;
  transition: all .75s linear;
}

nav ul {
  display: flex;
  flex-wrap: wrap;
  list-style: none;
}

nav li {
  display: none;
  padding: 10px;
  margin: 0 5px;
  text-transform: uppercase;
  cursor: pointer;
  /* transition: all .1s linear; */
}

.active {
  color: #f7a072;
}

nav i {
  padding: 10px;
  font-size: 35px;
  transition: all 1.2s linear;
  cursor: pointer;
  animation: popin 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
}

@keyframes popin{
  0% {
    transform:scale(0);
  }
  100%{
    transform:scale(1);
  }
}

.spin {
  transform: rotate(360deg);
}

/* NOTE: page one */

.logo-div {
  width: 100%;
  height: auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: white;
  padding: 40px;
  animation: slideUp 2s forwards;
  /* margin-top: 300px; */
  opacity: 0;
    /* box-shadow: 1px 1px 500px 1px #423e37; */
}

@keyframes slideUp {
  100% {
    margin-top: 0;
    opacity: 1;
  }
}

.logo-div h1{
  font-size: 60px;
}

.logo-div h3 {
  font-size: 25px;
}

.logo-div img {
  width: 100%;
  height: auto;
}

.page-one-inner {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* NOTE: about */

.page-two-inner .header,
.page-three-inner .header,
.page-four-inner .header {
  margin-top: 67px;
  padding: 30px 15px;
  font-size: 80px;
  color: #423e37;
}

.about-container,
.work-container {
  display: flex;
  justify-content: space-around;
  width: 100%;
  flex-wrap: wrap;
}

.about-container .picture img,
.work-container .picture img {
  width: 100%;
  height: auto;
}

.about-container .picture,
.work-container .picture {
  width: 45%;
  min-width: 375px;
  padding: 15px;

}

.about-container .about-details {
  width: 45%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 15px;
  color: #423e37;
  line-height: 2;
  min-width: 375px;
}

.skills {
  color: #9a454d;
  font-size: .75rem;
  text-align: center;
  width: 100%;
}

/* NOTE: work page */

.work-container {
  margin-bottom: 67px;
}

.work-details h1 {
  font-size: 40px;
}

.work-details p {
  padding: 5px 15px;
}

.work-details .tech-details {
  color: #9a454d;
}

.work-details {
  width: 45%;
  min-width: 375px;
  padding: 15px;
  color: #423e37;
  line-height: 2;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.work-btn {
  border: 1px solid #9a454d;
  padding: 10px 50px;
  margin-top: 10px;
  background-color: #9a454d;
}

a {
  text-decoration: none;
  color: white;
  text-align: center;
  width: 60%;
  margin-left: 15px;
}

